--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
-    <meta name="description" content="Componente de Post com Flexbox, Este projeto introduz o conceito mais fundamental de layout em CSS moderno: o Flexbox.">
+    <meta name="description" content="Componente de Post com Flexbox, Site que projeta um componente de post com Flexbox">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="Post, Componente, Flexbox">
+    <meta name="author" content="Giovany Piveta">
     <title>Post com Flexbox</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./assets/IconeLaptop.png" type="image/x-icon">
 </head>
 
 <body>
